# tells pip what build tool to use to build your package
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# tells pip how to build your pypi webpage & what dependencies to install
[project]
name = "liquibook-lib"
version = "0.1"
authors = [
  { name="Eric Newhuis", email="freewill@librem.one" }]
description = "Liquibook Library"
dependencies = ["protobuf"]
requires-python = ">=3.8"
packages = ["python"]
